<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProductDetailActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/black"/>
    <ImageView
        android:id="@+id/product_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"
        android:src="@drawable/ic_sofa"
        android:scaleType="fitCenter"
        app:layout_constraintHeight_percent=".3"/>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_info_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_img"
        app:layout_constraintBottom_toTopOf="@+id/add_to_cart_layout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">
            <TextView
                android:id="@+id/product_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="normal"/>

            <LinearLayout
                android:id="@+id/rating_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_rating"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_name_text"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="4.5"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_rate"
                    android:scaleType="fitCenter"/>
            </LinearLayout>
            <TextView
                android:id="@+id/reviews_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/product_name_text"
                app:layout_constraintStart_toEndOf="@+id/rating_layout"
                android:layout_marginTop="17dp"
                android:layout_marginStart="10dp"
                android:text="1034 Ratings | 104 Reviews"
                android:textColor="@color/black"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/per_month_rent_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_layout"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/rent"/>
            <TextView
                android:id="@+id/per_month_rent_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_layout"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:text="$60/Month"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/refundable_deposite_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/per_month_rent_title_text"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/color_primary_light"
                android:text="@string/rfunable_deposite"/>
            <TextView
                android:id="@+id/refunable_deposite_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/per_month_rent_title_text"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:textColor="@color/color_primary_light"
                android:text="$60/month"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/offer_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/refundable_deposite_title_text"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:background="@drawable/bg_offer">
            <TextView
                android:id="@+id/offer_info_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"
                android:text="@string/offer_text"
                app:layout_constraintEnd_toStartOf="@+id/offer_img"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/offer_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_offer"
                app:tint="@color/white" />
                <TextView
                    android:id="@+id/view_all_offers_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/offer_info_text"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:text="@string/view_all_offers_text"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/select_size_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/offer_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:text="@string/select_size"
                android:textColor="@color/black"
                app:layout_constraintWidth_percent=".3"
                android:textSize="17sp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sizes_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/offer_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/select_size_title_text"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/six_by_three_size_text"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_size"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="6x3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/six_by_four_size_text"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:id="@+id/six_by_four_size_text"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_light_size"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="6x4"
                    app:layout_constraintStart_toEndOf="@+id/six_by_three_size_text"
                   app:layout_constraintEnd_toStartOf="@+id/six_by_five_size_text"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:id="@+id/six_by_five_size_text"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_light_size"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="6x5"
                    app:layout_constraintStart_toEndOf="@+id/six_by_four_size_text"
                    app:layout_constraintEnd_toStartOf="@+id/six_by_six_size_text"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:id="@+id/six_by_six_size_text"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_light_size"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="6x6"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/select_tenure_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent=".3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_size_title_text"
                android:layout_marginTop="30dp"
                android:text="@string/select_tenure_title"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/tensure_value_edtv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@+id/select_tenure_title_text"
                app:layout_constraintTop_toBottomOf="@+id/sizes_layout"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_tenure_hint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColorHint="@android:color/darker_gray"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_tenure_edtv"
                app:layout_constraintEnd_toEndOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_to_cart_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/bg_add_to_cart_layout"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/rent_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20sp"
            android:text="@string/rent"
            android:textSize="13sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/rent_print_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_to_cart_btn"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/rent_title_text"
            android:text="@string/product_price_text"/>

        <TextView
            android:id="@+id/add_to_cart_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_to_cart"
            android:textColor="@color/black"
            android:background="@drawable/bg_add_to_cart_btn"

            android:textSize="15sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>