<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_search_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_add_to_cart_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".32"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/app_name"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_city"/>

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            tools:targetApi="lollipop" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:iconifiedByDefault="false"
            android:queryHint="Search here"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/spinner_city"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/main_search_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/category_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/our_category"/>

            <GridLayout
                android:id="@+id/mainGrid"
                android:columnCount="3"
                android:rowCount="2"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:layout_weight="8"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_search"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="3dp"
                >

                <!-- Row 1 -->

                <!-- Column 1 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/ic_bed"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:scaleType="fitCenter"/>

                        <TextView
                            android:text="Bed Room"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- Column 2 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="8dp"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_sofa"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:scaleType="fitCenter"
                            android:layout_height="55dp" />

                        <TextView
                            android:text="Living Room"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!-- Row 2 -->

                <!-- Column 1 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_camera"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:scaleType="fitCenter"
                            android:layout_height="55dp" />

                        <TextView
                            android:text="DSLR Camera"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- Column 2 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="8dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_machine"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="55dp"
                            android:scaleType="fitCenter"/>

                        <TextView
                            android:text="Appliances"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!-- Row 2 -->

                <!-- Column 1 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="8dp"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_storage"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:scaleType="fitCenter"
                            android:layout_height="55dp" />

                        <TextView
                            android:text="Storage"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- Column 2 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="8dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_packages"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="55dp"
                            android:scaleType="fitCenter"/>

                        <TextView
                            android:text="Packages"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

            <TextView
                android:id="@+id/trending_products_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/trending_products"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/trending_items_layout"/>
            <TextView
                android:id="@+id/recently_viewed_products_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recent_viewed_products"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recent_viewed_products_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/trending_items_layout"
               android:layout_marginBottom="10dp"/>






        </LinearLayout>



    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>